fix: consistant documentation
